trabalhando com o JS, erro no Async /await

--- a/pokedex.css
+++ b/pokedex.css
@@ -33,10 +33,11 @@ h1{
     font-size: var(--font-size-titulos);
 }
 
-.valor{
+#valor{
     font-family: var(--fuente-texto);
     font-size: var(--font-size-texto);
-    width: 250px;
+    width: 150px;
+    
 }
 
 .buscar{
