--- a/CSS/media.css
+++ b/CSS/media.css
@@ -5,13 +5,11 @@
     }
 
     .navegacao {
-        display: flex;
-        flex-direction: column;
+        text-align: center;
     }
     
     .navegacao img{
-        width: 50px;
-        height: 50px;
+        display: none;
     }
     
     .navegacao a{
