--- a/CSS/form_validacao.css
+++ b/CSS/form_validacao.css
@@ -1,36 +1,91 @@
 
-.form-success input {
-    border: 3px solid #4ECA64;
-}
+ .formulario {
+    font-family: var( --fuente-texto);
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+  }
 
-.form-error input {
-    border: 3px solid #DB5A5A;
-}
-
-.form-error i.error {
-    visibility: visible;
-}
-
-.form-success i.success {
-    visibility: visible;
-}
-
-.form-error span{
-    color: #DB5A5A;
-    visibility: visible;
-}
-
-.form-contact i {
-    position: absolute;
-    top: 45px;
-    right: 10px;
-    visibility: hidden;
-}
-
-.form-contact span {
+  .formulario span  {
     visibility: hidden;
     position: absolute;
-    margin-top: 5px;
+    margin-top: 0px;
     font-size: 14px;
 
 }
+
+  .formulario input {
+      border: 2px solid #3E445B;
+      border-radius: 5px;
+      outline: 0;
+      display: block;
+      font-size: 14px;
+      width: 100%;
+      padding: 15px;
+  }
+
+  .formulario textarea{
+    font-family: var( --fuente-texto);
+    border: 2px solid #3E445B;
+    border-radius: 5px;
+    outline: 0;
+    display: block;
+    font-size: 14px;
+    width: 100%;
+    padding: 15px;
+  }
+
+  .form-contact button {
+    background-color: #201E3E;
+    border-radius: 5px;
+    color: #fff;
+    padding: 15px;
+    font-size: 15px;
+    font-weight: 600;
+    width: 100%;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+  .form-contact button:hover {
+    background-color: var(--body-color);
+    transition: 0.3s;
+}
+
+/* Validaçoes do formulario */
+
+.formulario.sucess input{
+    border: 3px solid #4ECA64;
+  }
+  
+  .formulario.error input{
+    border: 3px solid #DB5A5A;
+  }
+  
+  .error span{
+    color: #DB5A5A;
+    visibility: visible;
+    background-color: #201E3E;
+  }
+  
+  /* Simulação de envio */
+
+  .contact-response {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    }
+
+    .contact-response-erro {
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .none{
+    display: none;
+    }
+
+    .loader {
+    text-align: center;
+    }
