--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ ol{
 
 .container_tecnologias{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
     padding-top: 20px;
 }
-
 .icon{
     width: 150px;
     height: 150px;
