--- a/heroImage.css
+++ b/heroImage.css
@@ -1,7 +1,7 @@
 .hero {
-    background-image: url("https://img.freepik.com/free-vector/blue-futuristic-networking-technology_53876-97395.jpg?t=st=1654378943~exp=1654379543~hmac=80f92b7d225bdbec2a8ca744c9b88c7616a9a5c8a99666037908f988186c1c4a&w=1350");
+    background-image: url("https://user-images.githubusercontent.com/101142283/210440032-f8cba697-a907-4913-ad9c-9103893090e2.png");
     background-color: rgba(0, 0, 0, .70);
-    height: 500px;
+    height: 395px;
     width: 100%;
     background-repeat: no-repeat; 
     display: flex;
@@ -22,8 +22,8 @@ h1{
     display: flex;
     margin: 20px 10px 20px 10px;
     position: relative;
-    top: 55px;
-    right: 265px;
+    top: 145px;
+    right: 55px;
 }
 
 .box1 a{
@@ -34,7 +34,7 @@ padding-right: 10px;
 .box2 img{
     display: flex;
     position: relative;
-    right: 100px;
+    right: 273px;
     border-radius: 50%;
 }
 
