--- a/navegacao.css
+++ b/navegacao.css
@@ -1,6 +1,6 @@
 header{
-    background: var(--main-color);
-    background: var(--main-color);
+    background: var(--container-color);
+    background: var(--container-color);
 }
 
 
