--- a/sobremim.css
+++ b/sobremim.css
@@ -1,15 +1,13 @@
-.sobremim{
-    padding-left: 50px;    
-}
-
 .container_sobremim{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 .item1{ 
-    width: 950px;
+    display: flex;
+    align-items: center;
+    width: 500px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 5px;
